--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,17 @@
 buildscript {
     ext {
         springBootVersion = '1.5.3.RELEASE'
-        kotlinVersion = '1.1.2'
+        kotlinVersion = '1.1.2-4'
+        gsonVersion = '2.8.0'
+        junitVersion = '4.12'
+        junitJupiteVersion = '5.0.0-M4'
+        junitPlatformVersion = '1.0.0-M4'
+        junitVintageVersion = '4.12.0-M4'
         jacksonModuleKotlinVersion = '2.8.8'
+        spekVersion = '1.1.1'
+        restAssuredVersion = '3.0.3'
+        hamcrestVersion = '1.3'
+        hamkrestVersion = '1.4.0.0'
     }
     repositories {
         mavenLocal()
@@ -47,6 +56,7 @@ sourceSets {
 
 dependencies {
     compile("org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion")
+    compile("org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlinVersion")
     compile("org.jetbrains.kotlin:kotlin-runtime:$kotlinVersion")
     compile("org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion")
 
@@ -54,8 +64,24 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web:$springBootVersion")
     compile("org.springframework.boot:spring-boot-starter-jersey:$springBootVersion")
     compile("org.springframework.boot:spring-boot-starter-undertow:$springBootVersion")
+    compile("org.springframework.boot:spring-boot-starter-data-jpa:$springBootVersion")
+    compile("org.springframework.boot:spring-boot-starter-security:$springBootVersion")
 
     compile("com.fasterxml.jackson.module:jackson-module-kotlin:$jacksonModuleKotlinVersion")
+    compile("com.google.code.gson:gson:$gsonVersion")
+    compile("hsqldb:hsqldb")
+
+    testCompile("org.jetbrains.spek:spek-api:$spekVersion")
+    testCompile("org.jetbrains.spek:spek-junit-platform-engine:$spekVersion")
+    testCompile("org.junit.jupiter:junit-jupiter-api:$junitJupiteVersion")
+    testCompile("junit:junit:$junitVersion")
+    testCompile("org.junit.platform:junit-platform-runner:$junitPlatformVersion")
+
+    testCompile("io.rest-assured:rest-assured:$restAssuredVersion")
+    testCompile("io.rest-assured:json-path:$restAssuredVersion")
+    testCompile("io.rest-assured:json-schema-validator:$restAssuredVersion")
+    testCompile("org.hamcrest:hamcrest-all:$hamcrestVersion")
+    testCompile("com.natpryce:hamkrest:$hamkrestVersion")
 
     testCompile("org.jetbrains.kotlin:kotlin-test:$kotlinVersion")
     testCompile("org.jetbrains.kotlin:kotlin-test-junit:$kotlinVersion")
