--- a/build.gradle
+++ b/build.gradle
@@ -74,7 +74,7 @@ sourceSets {
 dependencies {
     //compile("org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion")
     compile("org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlinVersion")
-    compile("org.jetbrains.kotlin:kotlin-runtime:$kotlinVersion")
+    //compile("org.jetbrains.kotlin:kotlin-runtime:$kotlinVersion")
     compile("org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion")
 
     compile("org.springframework.boot:spring-boot-starter:$springBootVersion")
